--- a/docs/examples/obervability/initializer-observability.yaml
+++ b/docs/examples/obervability/initializer-observability.yaml
@@ -103,7 +103,7 @@ spec:
             repoType: helm
             repoUrl: https://prometheus-community.github.io/helm-charts
             targetNamespace: observability
-            releaseName: prometheus-server
+            releaseName: prometheus
             values:
               alertmanager:
                 persistentVolume:
@@ -113,21 +113,23 @@ spec:
                 persistentVolume:
                   storageClass: "alicloud-disk-available"
                   size: "20Gi"
-#            traits:
-#              #            - type: pure-ingress # add ingress for Prometheus service
-#              #              properties:
-#              #                domain: prometheus.c4c85a750c53a44a38b3902978f85d8e7.cn-hongkong.alicontainer.com
-#              #                http:
-#              #                  "/": 80
-#              - type: register-grafana-datasource # register Prometheus datasource to Grafana
-#                properties:
-#                  grafanaUrl: "http://grafana.c4c85a750c53a44a38b3902978f85d8e7.cn-hongkong.alicontainer.com"
-#                  credentialSecret: grafana
-#                  credentialSecretNamespace: observability
-#                  name: prometheus
-#                  url: "http://prometheus.c4c85a750c53a44a38b3902978f85d8e7.cn-hongkong.alicontainer.com"
-#                  type: prometheus
-#                  access: proxy
+          traits:
+            #            - type: pure-ingress # add ingress for Prometheus service
+            #              properties:
+            #                domain: prometheus.c4c85a750c53a44a38b3902978f85d8e7.cn-hongkong.alicontainer.com
+            #                http:
+            #                  "/": 80
+            - type: register-grafana-datasource # register Prometheus datasource to Grafana
+              properties:
+                grafanaServiceName: grafana
+                grafanaServiceNamespace: observability
+                credentialSecret: grafana
+                credentialSecretNamespace: observability
+                name: prometheus
+                service: prometheus-server
+                namespace: observability
+                type: prometheus
+                access: proxy
 
         # install kube-state-metrics
         - name: kube-state-metrics
