--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -8,7 +8,7 @@ applyOnceOnly: "off"
 
 disableCaps: ""
 image:
-  repository: 249401644/vela-core
+  repository: oamdev/vela-core
   tag: latest
   pullPolicy: Always
 
