--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -1,5 +1,5 @@
 # Build the manager binary
-FROM --platform=${BUILDPLATFORM:-linux/amd64} golang:1.16-alpine as builder
+FROM --platform=${BUILDPLATFORM:-linux/amd64} golang:1.14-alpine as builder
 
 WORKDIR /workspace
 # Copy the Go Modules manifests
@@ -11,7 +11,9 @@ RUN go mod download
 
 # Copy the go source
 COPY cmd/core/main.go main.go
+COPY cmd/core/main_e2e_test.go main_e2e_test.go
 COPY cmd/apiserver/main.go cmd/apiserver/main.go
+COPY cmd/ cmd/
 COPY apis/ apis/
 COPY pkg/ pkg/
 COPY version/ version/
@@ -20,9 +22,9 @@ COPY version/ version/
 ARG TARGETARCH
 ARG VERSION
 ARG GITVERSION
-RUN GO111MODULE=on CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} \
-    go build -a -ldflags "-s -w -X github.com/oam-dev/kubevela/version.VelaVersion=${VERSION:-undefined} -X github.com/oam-dev/kubevela/version.GitRevision=${GITVERSION:-undefined}" \
-    -o manager-${TARGETARCH} main.go
+
+RUN  apk add gcc musl-dev libc-dev ;\
+     go test -c -o manager-${TARGETARCH}  -cover -covermode=atomic -coverpkg ./... .
 
 RUN GO111MODULE=on CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} \
     go build -a -ldflags "-s -w -X github.com/oam-dev/kubevela/version.VelaVersion=${VERSION:-undefined} -X github.com/oam-dev/kubevela/version.GitRevision=${GITVERSION:-undefined}" \
@@ -44,6 +46,8 @@ COPY --from=builder /workspace/manager-${TARGETARCH} /usr/local/bin/manager
 COPY --from=builder /workspace/apiserver-${TARGETARCH} /usr/local/bin/apiserver
 
 COPY entrypoint.sh /usr/local/bin/
+
+VOLUME ["/workspace/data"]
 
 ENTRYPOINT ["entrypoint.sh"]
 
