--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -63,10 +63,10 @@ jobs:
             ghcr.io/${{ github.repository }}/vela-core:${{ steps.get_version.outputs.VERSION }}
             docker.io/oamdev/vela-core:${{ steps.get_version.outputs.VERSION }}
       - uses: docker/build-push-action@v2
-        name: Build & Pushing runtime
+        name: Build & Pushing runtime rollout
         with:
           context: .
-          file: runtime/Dockerfile
+          file: runtime/rollout/Dockerfile
           labels: |-
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
@@ -76,8 +76,8 @@ jobs:
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |-
-            ghcr.io/${{ github.repository }}/vela-runtime:${{ steps.get_version.outputs.VERSION }}
-            docker.io/oamdev/vela-runtime:${{ steps.get_version.outputs.VERSION }}
+            ghcr.io/${{ github.repository }}/vela-runtime-rollout:${{ steps.get_version.outputs.VERSION }}
+            docker.io/oamdev/vela-runtime-rollout:${{ steps.get_version.outputs.VERSION }}
 
   publish-charts:
     env:
@@ -85,7 +85,7 @@ jobs:
       HELM_CHART: charts/vela-core
       LEGACY_HELM_CHART: legacy/charts/vela-core-legacy
       OAM_RUNTIME_HELM_CHART: charts/oam-runtime
-      VELA_RUNTIME_HELM_CHART: runtime/charts
+      VELA_RUNTIME_ROLLOUT_HELM_CHART: runtime/rollout/charts
       LOCAL_OSS_DIRECTORY: .oss/
     runs-on: ubuntu-20.04
     steps:
