--- a/vela-templates/addons/kruise/definitions/cloneset.yaml
+++ b/vela-templates/addons/kruise/definitions/cloneset.yaml
@@ -104,6 +104,22 @@ spec:
         	}
         }
         parameter: {
+        	#ENV: {
+        		name:   string
+        		value?: string
+        		valueFrom?: secretKeyRef: {
+        			name: string
+        			key:  string
+        		}
+        	}
+            #HealthProbe: {
+        		// +usage=Instructions for assessing container health by executing a command. Either this attribute or the httpGet attribute or the tcpSocket attribute MUST be specified. This attribute is mutually exclusive with both the httpGet attribute and the tcpSocket attribute.
+        		exec?: {
+        			// +usage=A command to be executed inside the container to assess its health. Each space delimited token of the command is a separate array element. Commands exiting 0 are considered to be successful probes, whilst all other exit codes are considered failures.
+        			command: [...string]
+        		}
+        	}
+
         	// +usage=Which image would you like to use for your service
         	// +short=i
         	image: string
