--- a/runtime/rollout/charts/templates/test/test-application.yaml
+++ b/runtime/rollout/charts/templates/test/test-application.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "vela-runtime-rollout.fullname" . }}-test-connection"
+  name: "{{ include "vela-rollout.fullname" . }}-test-connection"
   labels:
-  {{- include "vela-runtime-rollout.labels" . | nindent 4 }}
+  {{- include "vela-rollout.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "vela-runtime-rollout.fullname" . }}:{{ .Values.healthCheck.port }}']
+      args: ['{{ include "vela-rollout.fullname" . }}:{{ .Values.healthCheck.port }}']
   restartPolicy: Never
