--- a/runtime/rollout/charts/values.yaml
+++ b/runtime/rollout/charts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: oamdev/vela-runtime-rollout
+  repository: oamdev/vela-rollout
   tag: latest
   pullPolicy: Always
 
