--- a/vela-templates/addons/terraform/template.yaml
+++ b/vela-templates/addons/terraform/template.yaml
@@ -21,13 +21,13 @@ spec:
             repoType: git
             repoUrl: https://github.com/oam-dev/terraform-controller
             chart: ./chart
-{{  range .ResourceFiles  }}
-        - name: {{ .Name }}
+[[ range .ResourceFiles ]]
+        - name: [[ .Name ]]
           type: raw
           properties:
-{{ .Content | indent 12 }} {{ end }}
-{{  range .DefinitionFiles  }}
-        - name: {{ .Name }}
+[[ .Content | indent 12 ]] [[ end ]]
+[[ range .DefinitionFiles ]]
+        - name: [[ .Name ]]
           type: raw
           properties:
-{{ .Content | indent 12 }} {{ end }}
+[[ .Content | indent 12 ]] [[ end ]]
