update cert image

--- a/docs/examples/vela-app.yaml
+++ b/docs/examples/vela-app.yaml
@@ -10,7 +10,7 @@ spec:
         image: crccheck/hello-world
         port: 8000
       traits:
-        - type: ingress
+        - type: ingress-1-20
           properties:
             domain: testsvc.example.com
             http:
