--- a/docs/examples/obervability/trait-import-grafana-dashboard.yaml
+++ b/docs/examples/obervability/trait-import-grafana-dashboard.yaml
@@ -19,7 +19,7 @@ spec:
         			credentialSecret:          parameter.credentialSecret
         			credentialSecretNamespace: parameter.credentialSecretNamespace
         		}
-        		url: parameter.url
+        		urls: parameter.urls
         	}
         }
 
@@ -28,6 +28,5 @@ spec:
         	grafanaServiceNamespace:   *"default" | string
         	credentialSecret:          string
         	credentialSecretNamespace: *"default" | string
-        	url:                       string
+        	urls: [...string]
         }
-        
